Fix avatar alignment

--- a/app/assets/stylesheets/trestle/components/_avatar.scss
+++ b/app/assets/stylesheets/trestle/components/_avatar.scss
@@ -6,6 +6,7 @@
   box-shadow: rgba(black, 0.25) 0 1px 0;
 
   img {
+    display: block;
     width: 100%;
     border-radius: 50%;
   }
