--- a/app/assets/stylesheets/trestle/components/_table.scss
+++ b/app/assets/stylesheets/trestle/components/_table.scss
@@ -71,5 +71,6 @@
 
   .avatar {
     width: 32px;
+    vertical-align: middle;
   }
 }
